# miniRT

./: .gitignore  CMakeLists.txt  Makefile  arrays.c  color.c  error.c  image.c  intersections.c  intersections_scene.c  lighting.c  main.c  miniRT  minirt  minirt.h  parse_arrays.c  parse_scene.c  parse_type.c  parse_vec.c  v3.c  v3math.c
libs/glad/: CMakeLists.txt
libs/libft/: CMakeLists.txt  Makefile  ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isint.c  ft_isnum.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstfind.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstmax.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putunbr_fd.c  ft_split.c  (+18 more)
libs/libft/ft_printf/: ft_printf.c  ft_printf.h
libs/libft/ft_printf/print_args/: print_char.c  print_hex.c  print_num.c  print_str.c
libs/libft/get_next_line/: get_next_line.c
libs/minilibx-linux/: Makefile.mk
scenes/: H2O.rt  aladin_room.rt  box.rt  error.rt  pillars.rt  test.rt  test1.rt  trees.rt
scenes/maps/: box.rt  room.rt  test.rt  test3.rt
tests/: a.out  plane_line.c  sphere_line.c
